<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pad_16"
    tools:context="mx.edu.utng.schedule.MainActivity"
    android:background="@drawable/blue_background">

    <Button
        android:id="@+id/btn_choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edt_name_file"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_74"
        android:text="@string/elige_una_imagen"
        android:background="@drawable/border"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_200"
        android:id="@+id/imv_day_image"
        android:layout_toRightOf="@id/btn_choose_file"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_name_file"
        android:hint="@string/escribe_dia_semana"
        android:layout_below="@id/imv_day_image"
        android:background="@drawable/border"
        android:textSize="@dimen/size_25"
        android:textStyle="bold"
        android:paddingLeft="@dimen/size_10"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_open_hour"
        android:hint="@string/hora_de_entrada"
        android:layout_below="@id/edt_name_file"
        android:background="@drawable/border"
        android:textSize="@dimen/size_25"
        android:textStyle="bold"
        android:paddingLeft="@dimen/size_10"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_close_hour"
        android:hint="@string/hora_de_cierre"
        android:layout_below="@id/edt_open_hour"
        android:background="@drawable/border"
        android:textSize="@dimen/size_25"
        android:textStyle="bold"
        android:paddingLeft="@dimen/size_10"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <ProgressBar
        android:id="@+id/pgb_loading"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_upload"
        android:layout_marginTop="@dimen/size_50"
        />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_close_hour"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_toLeftOf="@+id/imv_day_image"
        android:layout_toStartOf="@+id/imv_day_image"
        android:text="@string/guardar"
        android:background="@drawable/border"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pgb_loading"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/size_60"
        android:layout_marginRight="@dimen/size_60"
        android:text="Mostrar"
        android:background="@drawable/border"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

</RelativeLayout>
