<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8"
    cardView:cardCornerRadius="@dimen/size_10"
    cardView:cardBackgroundColor="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imv_day"
            android:layout_width="@dimen/size_200"
            android:layout_height="@dimen/size_200"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/txv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txv_open"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txv_open"
            android:layout_marginTop="@dimen/top_22"
            android:text="@string/dia"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txv_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txv_close"
            android:layout_alignStart="@+id/txv_close"
            android:layout_below="@+id/txv_day"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_28"
            android:text="@string/abierto"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20" />

        <TextView
            android:id="@+id/txv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txv_open"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_41"
            android:layout_marginStart="@dimen/margin_41"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_toEndOf="@+id/imv_day"
            android:layout_toRightOf="@+id/imv_day"
            android:text="@string/cerrado"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20" />
    </RelativeLayout>

</android.support.v7.widget.CardView>